//
//  AccessibilityIdentifire.swift
//  Likehate
//
//  Created by jun on 2019/09/28.
//  Copyright © 2019 jun. All rights reserved.
//

import Foundation


class IdenMane {
   
   struct first {
      static let NoAdButton = "NoAdButton"
      static let RestoreButton = "RestoreButton"
      static let RegiButton = "RegiButton"
      static let GoLikeButton = "LikeButton"
      static let GoHateButton = "HateButton"
      static let SettingButton = "SettingButton"
   }
   
   struct Regi {
      static let LikeButton = "LikeButton"
      static let HateButton = "HateButton"
      static let NaviHomeButton = "NaviHomeButton"
   }
   
   struct Like {
      static let LikeRegiButton = "LikeRegiButton"
      static let LikeTextField = "LikeTextField"
   }
   
   struct LikeAmount {
      static let OKButton = "OKButton"
   }
   
   struct Hate {
      static let HateRegiButton = "HateRegiButton"
      static let HateTextField = "HateTextField"
   }
   
   struct SeeLike {
      static let LikeTableView = "LikeTableView"
      static let SeeLikeGoHomeButton = "SeeLikeGoHomeButton"
   }
   
   struct SeeHate {
      static let HateTableView = "HateTableView"
      static let SeeHateGoHomeButton = "SeeHateGoHomeButton"
   }
}
